--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivitySignUp"
+    tools:context=".activity.ActivitySignUp"
     android:background="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -75,7 +75,8 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textViewSudahPunyaAkunMasukAja"
                 style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-                android:layout_marginTop="40dp"/>
+                android:layout_marginTop="40dp"
+                android:prompt="@string/jenis_akun"/>
 
             <Spinner
                 android:id="@+id/spinnerJenjangSekolah"
@@ -84,7 +85,8 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spinnerJenisAkun"
                 style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-                android:layout_marginTop="20dp"/>
+                android:layout_marginTop="20dp"
+                android:prompt="@string/jenjang_sekolah"/>
 
             <Spinner
                 android:id="@+id/spinnerTipeSekolah"
@@ -93,7 +95,8 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spinnerJenjangSekolah"
                 style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-                android:layout_marginTop="20dp"/>
+                android:layout_marginTop="20dp"
+                android:prompt="@string/tipe_sekolah"/>
 
 <!--            TODO: add sekolah field here-->
 
