--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ActivityHome">
-
+    tools:context=".activity.ActivityHome"
+    android:background="@color/white"
+    android:padding="20dp">
+    
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/videoRecylerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/item_video"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
