--- a/app/src/main/res/layout/activity_home_video_pembelajaran.xml
+++ b/app/src/main/res/layout/activity_home_video_pembelajaran.xml
@@ -12,5 +12,5 @@
         android:id="@+id/videoRecylerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_video"/>
+        tools:listitem="@layout/item_video_pembelajaran"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
