--- a/app/src/main/res/layout/item_program.xml
+++ b/app/src/main/res/layout/item_program.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
-    android:padding="20dp">
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/imageView"
@@ -23,7 +23,8 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         android:layout_marginTop="5dp"
         android:textColor="@color/black"
-        android:textSize="14sp"
-        android:maxLines="2"/>
+        android:textSize="12sp"
+        android:maxLines="2"
+        android:gravity="center_horizontal"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
