--- a/app/src/main/res/layout/item_video_pembelajaran.xml
+++ b/app/src/main/res/layout/item_video_pembelajaran.xml
@@ -15,19 +15,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="20dp"/>
-    
+
     <TextView
         android:id="@+id/namaCoursetTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/hanya_test"
         android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/itemVideoImageView"
+        android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="110dp"
         android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:maxLines="1"/>
 
     <TextView
         android:id="@+id/namaBidangTextView"
