--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_beranda"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="@string/beranda" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_pembelian"
+        android:icon="@drawable/ic_credit_card_black_24dp"
+        android:title="@string/pembelian" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_notifikasi"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/notifikasi" />
+
+    <item
+        android:id="@+id/navigation_akun"
+        android:icon="@drawable/ic_tag_faces_black_24dp"
+        android:title="@string/akun" />
 
 </menu>
