--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_beranda">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.otc.application.activity.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_beranda"
+        android:name="com.otc.application.activity.ui.beranda.BerandaFragment"
+        android:label="@string/beranda"
+        tools:layout="@layout/fragment_beranda" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.otc.application.activity.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_pembelian"
+        android:name="com.otc.application.activity.ui.pembelian.PembelianFragment"
+        android:label="@string/pembelian"
+        tools:layout="@layout/fragment_pembelian" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.otc.application.activity.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_notifikasi"
+        android:name="com.otc.application.activity.ui.notifications.NotifikasiFragment"
+        android:label="@string/notifikasi"
+        tools:layout="@layout/fragment_notifikasi" />
+
+    <fragment
+        android:id="@+id/navigation_akun"
+        android:name="com.otc.application.activity.ui.notifications.NotifikasiFragment"
+        android:label="@string/akun"
+        tools:layout="@layout/fragment_notifikasi" />
 </navigation>
