--- a/app/src/main/res/layout/fragment_akun.xml
+++ b/app/src/main/res/layout/fragment_akun.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ui.akun.AkunFragment">
+    tools:context=".fragment.AkunFragment">
 
     <TextView
         android:id="@+id/text_akun"
