add some components in activity home video watch "pembelajaran"

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="shadow">#00000033</color>
     <color name="light_chocolate">#F4F4E2</color>
     <color name="dark_grey">#636C77</color>
+    <color name="light_blue">#73D1EA</color>
 </resources>
