--- a/app/src/main/res/layout/activity_home_video_watch_pembelajaran.xml
+++ b/app/src/main/res/layout/activity_home_video_watch_pembelajaran.xml
@@ -7,20 +7,133 @@
     tools:context=".activity.ActivityHomeVideoWatchPembelajaran"
     android:background="@color/white">
 
-<!--    <VideoView-->
-<!--        android:layout_margin="20dp"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="300dp"-->
-<!--        android:id="@+id/videoView"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"/>-->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarWatchVideo"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:titleTextColor="@android:color/black"
+        android:background="?attr/colorPrimary"
+        app:titleTextAppearance="@style/Toolbar.TitleText"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/homeImageButton"
+            android:layout_gravity="end"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/ic_home_black_24dp"
+            android:background="?attr/colorPrimary"
+            android:scaleType="fitXY"/>
+    </androidx.appcompat.widget.Toolbar>
 
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
-        android:id="@+id/exoplayer"
-        android:layout_margin="20dp"
+       android:id="@+id/exoplayer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/toolbarWatchVideo"/>
+
+    <TextView
+        android:id="@+id/ksnTagTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/light_orange"
+        android:padding="5dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/exoplayer"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:text="KSN"/>
+
+    <TextView
+        android:id="@+id/provinsiTagTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/light_blue"
+        android:padding="5dp"
+        app:layout_constraintLeft_toRightOf="@+id/ksnTagTextView"
+        app:layout_constraintTop_toBottomOf="@+id/exoplayer"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:text="Provinsi"/>
+
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/exoplayer"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/ic_outlined_flag_black_24dp"
+        android:background="@color/white"
+        android:scaleType="fitXY"/>
+
+    <TextView
+        android:id="@+id/deskripsiTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/deskripsi"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ksnTagTextView"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:id="@+id/deskripsiKontenTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/deskripsiTextView"
+        android:layout_margin="20dp"
+        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:text="@string/hanya_test"/>
+
+    <TextView
+        android:id="@+id/pertanyaanTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/pertanyaan"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/deskripsiKontenTextView"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayoutPertanyaan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/pertanyaanTextView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:hintTextAppearance="@style/HintInputTextStyle">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textInputEditTextTulisPertanyaan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:textSize="14sp"
+            android:textColor="@color/black"
+            android:hint="@string/tulis_pertanyaan"
+            android:drawableRight="@drawable/ic_send_black_24dp"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
