--- a/app/src/main/res/layout/activity_home_video_watch_pembelajaran.xml
+++ b/app/src/main/res/layout/activity_home_video_watch_pembelajaran.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         app:titleTextColor="@android:color/black"
         android:background="?attr/colorPrimary"
-        app:titleTextAppearance="@style/Toolbar.TitleText"
+        app:titleTextAppearance="@style/Toolbar.TitleText18"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
 
