--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -103,9 +103,12 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginLeft="10dp"/>
 
-                <ImageView
+                <ImageButton
+                    android:id="@+id/signOutButton"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
+                    android:background="@color/white"
+                    android:scaleType="fitXY"
                     android:src="@drawable/ic_round_light_orange_24dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
